force-app/main/default/objects/Account/fields/Active_Cases__c.field-meta.xml
<CustomField>
    <fullName>Active_Cases__c</fullName>
    <label>Active Cases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>