force-app/main/default/objects/Account/fields/Law_Firm_Website__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Website__c</fullName>
    <label>Law Firm Website</label>
    <type>Url</type>
</CustomField>