force-app/main/default/objects/Account/fields/Practice_area__c.field-meta.xml
<CustomField>
    <fullName>Practice_area__c</fullName>
    <label>Practice area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>