force-app/main/default/objects/Account/fields/Referral_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Referral_Agreement__c</fullName>
    <label>Referral Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y/N</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>