force-app/main/default/objects/Account/fields/Regions_Served__c.field-meta.xml
<CustomField>
    <fullName>Regions_Served__c</fullName>
    <label>Regions Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>