force-app/main/default/objects/Account/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Volume</fullName>
            </value>
            <value>
                <fullName>PI Only</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>