force-app/main/default/objects/Account/fields/Total_Referrals_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Referrals_to_Date__c</fullName>
    <label>Total Referrals to Date</label>
    <type>Date</type>
</CustomField>